projet-fin-module/manifests/services/09-svc-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-web
  namespace: mbened-dev
spec:
  selector:
    app: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
