projet-fin-module/manifests/services/11-route-web.yaml
# Route OpenShift — seul point d'entrée public vers le serveur web
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-route
  namespace: mbened-dev
spec:
  to:
    kind: Service
    name: svc-web
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
